--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@esi/ui-components": "^10.3.0-beta.2",
-    "gatsby": "^2.21.13",
+    "@esi/ui-components": "^10.3.0-beta.4",
+    "gatsby": "^2.21.24",
     "gatsby-image": "^2.4.1",
+    "gatsby-link": "^2.4.2",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-source-contenta": "^1.0.0",
     "gatsby-source-drupal": "^3.5.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-sharp": "^2.5.1",
@@ -34,7 +36,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://localhost:8989/unit-testing\" && exit 1"
   },
   "repository": {
     "type": "git",
