--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@esi/ui-components": "^10.3.0-beta.4",
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/styles": "^4.9.14",
     "gatsby": "^2.21.24",
     "gatsby-image": "^2.4.1",
     "gatsby-link": "^2.4.2",
     "gatsby-plugin-manifest": "^2.4.2",
+    "gatsby-plugin-material-ui": "^2.1.8",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sass": "^2.3.1",
     "gatsby-plugin-sharp": "^2.6.1",
     "gatsby-source-contenta": "^1.0.0",
     "gatsby-source-drupal": "^3.5.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-sharp": "^2.5.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
