--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@esi/ui-components": "^10.3.0-beta.4",
     "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.14",
     "gatsby": "^2.21.24",
     "gatsby-image": "^2.4.1",
