--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-source-drupal": "^3.5.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-sharp": "^2.5.1",
+    "material-ui-image": "^3.2.3",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
