--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-material-ui-carousel": "^1.4.4"
   },
   "devDependencies": {
     "prettier": "2.0.5"
